# Chatbot

./: .gitignore  README.md  main_ai.py  main_client.py  main_server.py  pyproject.toml
src/client/: Aiclient.py  Client.py
src/clients/: ai_chat_client.py
src/common/: errors.py  models.py
src/server/: Server.py
